refactor layout and styles: update static file paths for improved modularity and adjust comments in CSS for clarity

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Honji Review{% endblock %}</title>
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('main_site.static', filename='images/favicon.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('main_site.static', filename='images/favicon.png') }}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_site.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('main_site.static', filename='css/main_site.css') }}">
+
     {% block head_css %}{% endblock %}
 </head>
 <body class="bg-[#0E0E10] text-[#EAEAEA]">
